# Argonaut

./: .gitignore  README.md  io.github.nibblex.Argonaut.yml  pyproject.toml  python3-requirements.json  requirements.txt
.github/workflows/: ci.yml  publish.yml
data/: io.github.nibblex.Argonaut.desktop  io.github.nibblex.Argonaut.metainfo.xml
src/argonaut/: __init__.py  __main__.py  i18n.py  main.py  nllb.py  package_dialog.py  packages.py  pdf.py  translation.py  window.py  worker.py
tests/: conftest.py  test_i18n.py  test_main.py  test_nllb.py  test_package_dialog.py  test_packages.py  test_pdf.py  test_translation.py  test_window.py  test_worker.py
